--- a/lab_api/package.json
+++ b/lab_api/package.json
@@ -10,9 +10,10 @@
   "author": "Alex",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "mongoose": "^6.3.2",
-    "body-parser": "^1.20.0"
+    "mongoose": "^6.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
