--- a/lab_api/package.json
+++ b/lab_api/package.json
@@ -10,12 +10,11 @@
   "author": "Alex",
   "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD
-=======
     "bcryptjs": "^2.4.3",
->>>>>>> 08a7677ee7ac01b4bf695a504722aa0c177835b1
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.3.2"
   },
   "devDependencies": {
