ruta ruta archivo agregado

--- a/lab_api/.env
+++ b/lab_api/.env
@@ -1,1 +1,6 @@
 MONGO_DB=mongodb+srv://user_node:BYxxFcvHxYohErgu@miclustercafe.kgjo7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+CLOUDINARY_UR=cloudinary://139556365197841:VwYqCqV7r0Iz6Ng3YXCh_-6BGYg@digy7p0ze
+CLOUDINARY_URL=cloudinary://343486981461275:IEkwqpcwT58arPGitZz0_9J9IVg@dqyr7ar6j
+
+
+// tengo que crear una funcion para subir el archivo
