--- a/flutterapp/pubspec.yaml
+++ b/flutterapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.2
   font_awesome_flutter: ^10.1.0
   google_fonts: ^3.0.1
+  animated_splash_screen: ^1.2.0
 
 dev_dependencies:
   flutter_test:
