--- a/flutterapp/pubspec.yaml
+++ b/flutterapp/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   google_fonts: ^3.0.1
   animated_splash_screen: ^1.2.0
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
