--- a/lab_api/.env
+++ b/lab_api/.env
@@ -1,5 +1,4 @@
 MONGO_DB=mongodb+srv://user_node:BYxxFcvHxYohErgu@miclustercafe.kgjo7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 CLOUDINARY_URL=cloudinary://139556365197841:VwYqCqV7r0Iz6Ng3YXCh_-6BGYg@digy7p0ze
+PORT=8080
 
-
-// tengo que crear una funcion para subir el archivo
