--- a/flutterapp/pubspec.yaml
+++ b/flutterapp/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^3.0.1
   animated_splash_screen: ^1.2.0
   charts_flutter: ^0.12.0
+  card_swiper: ^2.0.4
 
 dev_dependencies:
   flutter_test:
