--- a/flutterapp/pubspec.yaml
+++ b/flutterapp/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^3.0.1
   animated_splash_screen: ^1.2.0
   charts_flutter: ^0.12.0
+  image_picker: ^0.8.5+3
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
